--- a/assests/style/style.css
+++ b/assests/style/style.css
@@ -25,6 +25,7 @@ body {
     width: 450px;
     box-shadow: rgba(0, 0, 0, 0.1) 0 1px 2px;
     padding: 20px 35px;
+    box-sizing: border-box;
 }
 
 .column form { 
