--- a/assests/style/style.css
+++ b/assests/style/style.css
@@ -8,6 +8,7 @@ body {
 * {
     font-family: Arial, Helvetica, sans-serif;
     color: #333;
+    box-sizing: border-box;
 }
 
 .signInContainer {
@@ -25,12 +26,13 @@ body {
     width: 450px;
     box-shadow: rgba(0, 0, 0, 0.1) 0 1px 2px;
     padding: 20px 35px;
-    box-sizing: border-box;
+    overflow-y: auto;
 }
 
 .column form { 
 display: flex; 
 flex-direction: column;
+padding-top: 30px;
 }
 
 .column form input[type="email"],
