commit stylin error

--- a/assests/style/style.css
+++ b/assests/style/style.css
@@ -84,3 +84,10 @@ padding-top: 30px;
     font-weight: 400;
     text-decoration: none;
 }
+
+.errorMessage {
+    color: red;
+    font-size: 14px;
+    font-weight: 400;
+    text-align: center;
+}
