--- a/assests/style/style.css
+++ b/assests/style/style.css
@@ -11,6 +11,18 @@ body {
     box-sizing: border-box;
 }
 
+h3 {
+    color: #e2dfdf;
+}
+
+a h3:hover {
+    color: #fff;
+}
+
+a {
+    text-decoration: none;
+}
+
 .wrapper {
     min-width: 1050px;
     min-height: 100%;
@@ -164,4 +176,20 @@ button i   {
 .mainDetails button:hover {
     background-color: #e6e6e6;
     color: #000;
+}
+
+.category {
+    display: flex;
+    flex-direction: column;
+    padding: 10px 0;
+}
+
+.entities {
+    overflow-x: auto;
+    overflow-y: hidden;
+    white-space: nowrap;
+}
+
+.previewCategories {
+    padding: 0 50px;
 }
