--- a/assests/style/style.css
+++ b/assests/style/style.css
@@ -71,16 +71,17 @@ padding-top: 30px;
   width: 88px;
   border: none;
   border-radius: 3px;
-  font-weight: 500px;
+  font-weight: 500;
   margin-top: 10px;
   margin-bottom: 20px;   
+  font-size: 16px;
 }
 
 .column .header {
     padding: 20px 0;
 }
 
-.column .header h3{
+.column  h3{
     font-size: 24px;
     font-weight: 400;
     line-height: 32px;
@@ -146,7 +147,7 @@ padding-top: 30px;
     margin: 15px 0;
 }
 
-.mainDetails {
+.previewOverlay .mainDetails {
     position: relative;
     top: 35%;
     margin-left: 50px;
@@ -169,7 +170,7 @@ padding-top: 30px;
     cursor: pointer;
 }
 
-button i   {
+button i  {
     color: inherit;
 }
 
@@ -185,7 +186,7 @@ button i   {
 }
 
 .entities,
-.video {
+.videos {
     overflow-x: auto;
     overflow-y: hidden;
     white-space: nowrap;
@@ -220,4 +221,23 @@ button i   {
     display: flex;
     flex-direction: column;
     width: 230px;
+}
+
+
+.episodeContainer img {
+    width: 230px;
+    height: 129px;
+    object-fit: cover;
+}
+
+.episodeContainer .videoInfo h4,
+.episodeContainer .videoInfo span {
+    color: #fff;
+    width: 100%;
+    white-space: normal;
+}
+
+.episodeContainer .videoInfo {
+    max-height: 200px;
+    overflow-y: auto;
 }
