--- a/assests/style/style.css
+++ b/assests/style/style.css
@@ -241,3 +241,7 @@ button i  {
     max-height: 200px;
     overflow-y: auto;
 }
+
+.previewCategories.noScroll .category .entities {
+    white-space: normal;
+}
