--- a/assests/style/style.css
+++ b/assests/style/style.css
@@ -245,3 +245,30 @@ button i  {
 .previewCategories.noScroll .category .entities {
     white-space: normal;
 }
+
+.watchContainer video {
+  height: 100%;
+  width: 100%;
+}
+
+.videoControls {
+    position: absolute;
+    width: 100%;
+    z-index: 1;
+    display: flex;
+    align-items: center;
+    background-color: rgba(0, 0, 0, 0.3);
+}
+
+.videoControls h1 {
+    color: #fff;
+}
+
+.videoControls button {
+    font-size: 50px;
+    padding: 50px;
+    color: #fff;
+    background-color: transparent;
+    border: none;
+}
+
