--- a/assests/style/style.css
+++ b/assests/style/style.css
@@ -147,6 +147,12 @@ padding-top: 30px;
     margin: 15px 0;
 }
 
+.previewOverlay .mainDetails h4{
+    color: #fff;
+    font-size: 20px;
+    margin: 15px 0;
+}
+
 .previewOverlay .mainDetails {
     position: relative;
     top: 35%;
@@ -221,6 +227,7 @@ button i  {
     display: flex;
     flex-direction: column;
     width: 230px;
+    position: relative;
 }
 
 
@@ -270,5 +277,32 @@ button i  {
     color: #fff;
     background-color: transparent;
     border: none;
+}
+
+.upNext {
+    height: 100%;
+    justify-content: center;
+    margin-right: 300px;
+}
+
+.upNextContainer button {
+    padding: 0;
+}
+
+.upNextContainer h2,
+.upNextContainer h3 {
+    color: #fff;
+} 
+
+.watchNav {
+    z-index: 2;
+}
+
+.seen {
+    color: #2ecc71;
+    font-size: 26px;
+    position: absolute;
+    top: 5px;
+    left: 5px;
 }
 
