--- a/assests/style/style.css
+++ b/assests/style/style.css
@@ -114,6 +114,12 @@ padding-top: 30px;
 .previewImage,
 .previewVideo {
     width: 100%;
+    height: 100%;
+}
+
+.previewVideo video {
+    height: 100%;
+    width: 100%;
 }
 
 .previewContainer {
@@ -306,3 +312,50 @@ button i  {
     left: 5px;
 }
 
+.topBar {
+    position: fixed;
+    width: 100%;
+    z-index: 1;
+    display: flex;
+    align-items: center;
+    padding: 0 60px;
+    height: 70px;
+    box-sizing: border-box;
+    min-width: 1050px;
+    transition: background-color 200ms ease;
+}
+
+.topBar.scrolled {
+    background-color: #141414;
+    transition: background-color 250ms linear;
+}
+
+.logoContainer {
+    height: 40px;
+}
+
+.logoContainer img {
+    height: 100%;
+}
+
+.navLinks {
+    display: flex;
+    list-style: none;
+}
+
+.navLinks a {
+    color: #fff;
+    font-size: 14px;
+    margin-left: 20px;
+}
+
+.rightItems {
+    text-align: right;
+    flex: 1;
+}
+
+.rightItems i {
+    color: #fff;
+    font-size: 20px;
+    margin-left: 10px___-;
+}
