--- a/assests/style/style.css
+++ b/assests/style/style.css
@@ -363,3 +363,18 @@ button i  {
 .previewCategories h1 {
     color: #e5e5e5;
 }
+
+.textBoxContainer {
+    padding: 100px 50px;
+}
+
+.searchInput {
+    height: 50px;
+    width: 600px;
+    border: 1px solid #dedede;
+    background-color: transparent;
+    color: #fff;
+    font-size: 20px;
+    padding: 5px 10px;
+    border-radius: 3px;
+}
